# export_asap_plugin

./: .gitignore  README.html  README.md  export_asap.py  main.nf  nextflow.config  nextflow_schema.json  plugin.yaml  pyproject.toml
.github/workflows/: slivka-test.yml
containers/: Dockerfile
modules/local/export-asap/: main.nf
slivka-services/: export-asap.service.yaml
