[project]
name = "export-asap-plugin"
version = "0.1.0"
description = ""
authors = [
    {name = "Toan Phung",email = "toan.phung@proteo.info"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
